# Youtube

./: README.md  YouTube Content Optimization Desktop App - Complet.md  app_config.json  batch_processing.py  config.py  content_generation.py  export_utils.py  final_payload.json  implementation_plan.md  main.py  payload.json  pyproject.toml  requirements.txt  setup.py  transcript.txt  transcription.py  video_processing.py
